less/fork-woods.less
// --------------------------------
// Woods: Fork Changes
// --------------------------------


// Page Styles
// --------------------------------

body {
    padding: 0;
}

h1 {
    border-bottom: 3px solid @color-swatch3;
    padding-bottom: 10px;
    margin-bottom: 10px;
    display: inline-block;
}

.header-logo {
    @media @tablet {
        padding: 0;
    }
}

.template-header {
    width: 100%;
}

.header-wrapper {
    padding: 30px 0% 0 6%;

    @media @bp-desktop {
        padding-left: 4%;
    }
}

.footer-wrapper {
    padding: 0;
    padding: 0px 0px 20px;
}

.bk-pt-default .header-wrapper {
    padding: 2% 0% 2% 6%;
    background-color: @color__body--background;
    border-bottom: 1px solid #eeeeee;
}

.bk-pt-default .template-footer {
    margin: 0 auto;
}

// Navigation
// --------------------------------

.navigation-list {
    @media @bp-tablet {
        color: @color-swatch4;
    }
}

.bk-pt-home .navigation-toggle {
    padding: 22px;
}

.extendednavigation__navigation-toggle {
    @media @bp-tablet {
        box-shadow: none;
    }
}

.header-extendednavigation {
    padding: 0 20px;
}

.header-extendednavigation {
    -webkit-box-shadow: 3px 3px 0px rgba(50, 50, 50, 0.10);
    -moz-box-shadow:    3px 3px 0px rgba(50, 50, 50, 0.10);
    box-shadow:         3px 3px 0px rgba(50, 50, 50, 0.10);
    background-color: @color__navigation--background; background-image: -webkit-gradient(linear, left top, left bottom, from(@color__navigation--background), to(#008c00));
    background-image: -webkit-linear-gradient(top, @color__navigation--background, #008c00);
    background-image: -moz-linear-gradient(top, @color__navigation--background, #008c00);
    background-image: -ms-linear-gradient(top, @color__navigation--background, #008c00);
    background-image: -o-linear-gradient(top, @color__navigation--background, #008c00);
    background-image: linear-gradient(to bottom, @color__navigation--background, #008c00);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=@color__navigation--background, endColorstr=#008c00);
    padding: 0 20px;
    @media @bp-tablet {
        padding: 0;
    }
}

.navigation-list {
    width: 100%;
    @media @bp-desktop {
        width: 100%;
    }
}

.open .navigation-toggle:before {
    box-shadow: none;
}

.navigation-list--children {
    background-color: @color__navigation-list--background!important;
    margin: 0;
    @media @bp-tablet {
        background-color: lighten(@color__navigation-list--background,10%)!important;
    }
}

.navigation-item .item-name:hover,
.navigation-item.selected > .item-name {
    box-shadow: none!important;
}

.navigation-toggle:before {
    box-shadow: 0 8px 0 0;
}

.navigation-item.selected > .item-name,
.navigation-item .item-name:hover {
    color: @color__navigation--text--selected;
    @media @tablet {
        color: @color__navigation--text;
    }
}

.navigation-item.folder .navigation-list--children .item-name:hover {
    color: @color__navigation--text;
}


// Feature
// --------------------------------

.feature:after {
    display: none;
}

.feature__content-inner-wrap {
    background-color: @color__feature-content--background;
    display: inherit;
    padding: 30px;
    max-width: 60%;
    @media @tablet {
        max-width: 100%;
    }
}

.feature__headline {
    text-transform: uppercase;
}

.feature__headline,
.feature__strapline {
    max-width: 100%;
}

.feature__button,
.button,
button,
.blogpostlist__read-more {
    border: 0;
    padding: 8px 20px;
    background-color: @color__button--background; background-image: -webkit-gradient(linear, left top, left bottom, from(@color__button--background), to(@color__button--background--hover));
    background-image: -webkit-linear-gradient(top, @color__button--background, @color__button--background--hover);
    background-image: -moz-linear-gradient(top, @color__button--background, @color__button--background--hover);
    background-image: -ms-linear-gradient(top, @color__button--background, @color__button--background--hover);
    background-image: -o-linear-gradient(top, @color__button--background, @color__button--background--hover);
    background-image: linear-gradient(to bottom, @color__button--background, @color__button--background--hover);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=@color__button--background, endColorstr=@color__button--background--hover);
    -webkit-box-shadow: 3px 3px 0px rgba(50, 50, 50, 0.10);
    -moz-box-shadow:    3px 3px 0px rgba(50, 50, 50, 0.10);
    box-shadow:         3px 3px 0px rgba(50, 50, 50, 0.10);
    color: @color__button--text;
    &:hover {
        border: 0;
        background-color: @color__button--background--hover;
        background-image: none;
    }
}

.feature__button {
    margin-top: 15px;
}

.feature__background-image {
    height: 800px;
    @media @tablet {
        height: 700px;
    }
    @media @mobile {
        height: 600px;
    }
}

[data-widget-type="feature"] .widget-overlay {
    top: 0!important;
}


// Widgets
// --------------------------------

.icon--previous:before,
.icon--next:after,
.icon--pause:before {
    color: @color__button--text;
}

.pagination-item.current .button--pagination {
    background-color: @color__button--background--hover;
}

.twitter__retweeted-by {
    color: white;
}

.clicktocall__phone-number-link {
    @media @mobile {
        padding: 9px 12px;
        border-bottom: 0;
    }
}

button.responsiveslideshow__previous-button:hover, button.responsiveslideshow__next-button:hover, button.pause-toggle:hover {
    background-color: @color__button--background--hover!important;
}

button.responsiveslideshow__previous-button, button.responsiveslideshow__next-button, button.pause-toggle {
    background-color: @color__button--background;
}

.responsivecolumns .gallery .gallery-item {
    height: 120px;
}

.responsivecolumns .gallery .image-link {
    height: 120px;
}

.responsivecolumns .gallery .figure:hover .caption {
    display: none;
}

hr,
hr.rule {
    background-color: #eeeeee;
    height: 1px;
}


// Ecommerce
// --------------------------------

.select {
    border: 1px solid #eeeeee;
}

.quantity-wrap .button--quantity:hover {
    background-color: @color__button--background--hover;
}

.input--search.ecomproductslist__input {
    height: 42px;
}

.ecombasket__item-remove {
    padding: 10px 10px 10px 7px;
}

.basket-item,
.basket-item:last-child {
    border-top: 5px solid #eeeeee;
}

.product-gallery .gallery-item {
    height: 100%!important;
}


// Blog
// --------------------------------

.blogpost .image-link {
    text-align: left;
}

.blogpostlist__post-excerpt {
    p {
        margin-bottom: 10px;
    }
}

.blogpostlist .post-footer .timestamp {
    margin: 40px 20px 40px;
}

